# pyslideshow

./: .gitignore  README.md  clean.cmd  mypy.ini  pyproject.toml  slides.py
slideshow/: slideshow.py
